--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,14 @@ jobs:
 
     - stage: promote
       env:
+        - SERVICE=alpine
+      before_script:
+        - make travis-promote-before_script
+      script:
+        - make travis-promote-script
+
+    - stage: promote
+      env:
         - SERVICE=nginx
       before_script:
         - make travis-promote-before_script
